@@ -19,7 +19,7 @@
 
           //cartodb.createVis("map", vizjson_url, { share: true, title: true, description: true, search: true }).done(function(vis, layers) {
           cartodb.createVis("map", vizjson_url, { share: true, title: true, description: true, search: true
-            , force_gmaps_base_type: 'hybrid'
+            , gmaps_base_type: 'hybrid'
             //, force_gmaps_style: '[{"featureType":"landscape.natural","stylers":[{"gamma":0.01},{"weight":0.1}]},{"stylers":[{"saturation":-100},{"invert_lightness":true},{"gamma":4.17},{"lightness":-87}]},{"elementType":"labels","stylers":[{"visibility":"on"},{"lightness":3},{"gamma":1.85}]},{"stylers":[{"weight":1.2}]},{"featureType":"road.highway","stylers":[{"visibility":"simplified"},{"weight":0.3}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"road.arterial","stylers":[{"weight":0.3}]},{"featureType":"administrative.neighborhood","stylers":[{"visibility":"off"}]},{"featureType":"administrative.locality","stylers":[{"visibility":"off"}]},{"featureType":"poi","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"poi","stylers":[{"lightness":4}]},{"featureType":"administrative","stylers":[{"lightness":14},{"weight":0.8}]},{"featureType":"landscape.man_made","stylers":[{"lightness":13}]},{"featureType":"road.local","stylers":[{"weight":0.2}]},{"featureType":"road.highway","stylers":[{"weight":0.3}]}]'
           })
           .done(function(vis, layers) {
