@@ -1,5 +1,6 @@
 3.11.23 ()
 - fixes rendering issue with category legends that contain long names
+- Added new params options to cartodb.createVis(): gmaps_base_type and gmaps_style
 
 3.11.22 (03//11//2014)
 - fixes a bug that made the hidden Torque layers visible
